--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -41,7 +41,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         {% endif %}
         </div>
       </div>
-
+<!--End of profile pic-->
 
 
   </div>
