--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,7 +9,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
-      </ul>&nbsp;&nbsp;&nbsp;&nbsp;
+      </ul>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
           <li class="nav-item" style="color: blanchedalmond">{{current_user.username}}</li>&nbsp;&nbsp;&nbsp;&nbsp;
